# opensquilla

./: .env.example  CONTRIBUTING.md  README.md  RELEASES.md  pyproject.toml  start.ps1
.github/: pull_request_template.md
.github/scripts/: classify-ci-changes.sh  issue_link_sync.py  validate-pr-target-branch.sh
.github/workflows/: greetings.yml  issue-link-sync.yml  pr-target-branch.yml  wheelhouse-release.yml
docs/releases/: 0.3.1.md
scripts/: build_wheelhouse_zip.py  dev-install.ps1  dev-install.sh
scripts/supervisor/: install-autostart.ps1  lib.ps1  start-all.ps1  status.ps1  stop-all.ps1  uninstall-autostart.ps1
src/opensquilla/: env.py  paths.py  ui.py
src/opensquilla/channels/: feishu.py
src/opensquilla/cli/: autostart.py  gateway_cmd.py  gateway_lifecycle.py  init_cmd.py  main.py  profiles_cmd.py  ui.py
src/opensquilla/engine/: runtime.py
src/opensquilla/gateway/: pidlock.py  rpc_logs.py  scopes.py
src/opensquilla/gateway/static/js/views/: setup.js
src/opensquilla/observability/: __init__.py  decision_log.py  trace.py
src/opensquilla/onboarding/: flow.py  provider_specs.py
src/opensquilla/provider/: model_catalog.py
src/opensquilla/skills/bundled/multi-profile-setup/: SKILL.md
tests/: test_github_issue_link_sync.py  test_install_scripts.py  test_paths_profile.py  test_public_release_hygiene.py  test_release_consistency.py  test_secrets.py
tests/test_channels/: test_channel_manager_lifecycle.py
tests/test_ci/: test_workflows.py
tests/test_cli/: test_autostart.py  test_init_cmd.py  test_profile_env_loading.py  test_profiles_cmd.py
tests/test_gateway/: test_pidlock_orphan_lock.py  test_rpc_logs.py
tests/test_observability/: test_trace_contract.py  test_turn_call_log_contract.py
tests/test_onboarding/: test_flow.py
tests/test_provider/: test_minimax_m3.py
tests/test_scripts/: test_build_wheelhouse_zip.py
